Fix overflow of long unwrappable messages in the data drawer.
Summary: title

Test Plan: {F72557}

Reviewers: michelle, nserrino, #engineering

Reviewed By: michelle, #engineering

JIRA Issues: PC-270

Differential Revision: https://phab.corp.pixielabs.ai/D4920

GitOrigin-RevId: c279b5c16e342e5a467a56bc3d85c15d0830afe1

--- a/src/ui/src/utils/format-data.scss
+++ b/src/ui/src/utils/format-data.scss
@@ -32,6 +32,7 @@
 
 .formatted_data--json-string {
     color: #e6db74;
+    word-break: break-all;
 }
 
 .formatted_data--json {
